<resources>
    <string name="app_name">MVVM-Firebase-Authentication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="error_input_empty">Fields cannot be empty!</string>
    <string name="error_password_short">Password must be atleast 8 characters</string>
    <string name="error_invalid_email">Invalid email!</string>
    <string name="success_register">Registration Successful</string>
    <string name="logout">Logout</string>
</resources>